<resources>
    <string name="app_name">Trails</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">MY TRAILS FRAGMENT</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_explore">Explorar</string>
    <string name="title_my_trails">Meus Percursos</string>
    <string name="title_start">Começar</string>
    <string name="title_profile">Perfil</string>
    <string name="title_settings">Definições</string>
    <string name="btn_clear">Apagar</string>
    <string name="btn_Save">Guardar</string>
    <string name="trails_image">Trail Images</string>
    <string name="trails_comment">Trail Comment</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="username">Username</string>
    <string name="title_download">Descarregados</string>
    <string name="title_trails">Meus Percursos</string>
    <string name="title_history">Histórico</string>
    <string name="title_favorites">Favoritos</string>

    <string name="btn_back">Voltar</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Registar</string>

    <string name="facebook_app_id">3691948064231784</string>
    <string name="fb_login_protocol_scheme">fb3691948064231784</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_location">Localização: </string>
    <string name="title_distance">Distância: </string>
    <string name="title_difficulty">Dificuldade: </string>
    <string name="title_terrain">Tipo de Terreno: </string>
    <string name="title_time">Tempo: </string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>


    <string name="msgError_fields">Verifique os campos!</string>
    <string name="seccessRegister">Utilizador criado com sucesso!</string>
    <string name="msgError">Erro ao registar utilizador, por favor tente novamente!</string>
    <string name="msgReviewRating">Tem que colocar um rating!</string>
    <string name="txtUsername">Nome de Utilizador</string>
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Password</string>
    <string name="txtBirthday">Data de Nascimento</string>
    <string name="txtCity">Cidade</string>
    <string name="txtTitleNewAccount">Registo</string>

    <string name="errorUserName">Nome necessário</string>
    <string name="errorUserEmail">Email necessário</string>
    <string name="errorUserEmail1">Este email não é válido</string>
    <string name="errorUserPassword">Password necessária</string>
    <string name="errorUserPassword1">A password não é válida, deve ter mais de 5 caracteres</string>
    <string name="errorBirthday">Data de nascimento necessária</string>
    <string name="errorBirthday1">A data é superior à data atual</string>
    <string name="errorCity">Cidade necessária</string>
    <string name="errorCity1">Coloque uma cidade válida</string>
    <string name="photoTxt">Fotografia</string>
    <string name="titleAccountLogin">Login</string>

    <string name="txtSignOut">Terminar Sessão</string>
    <string name="txtErorPassConf">A password de confirmação não coincide com a nova</string>
    <string name="txtErorPass">A nova password é igual à sua password antiga</string>

    <string name="KMTotal">Total de KM Percorridos:</string>
    <string name="TotalTrailsDone">Total de Trilhos Realizados:</string>
    <string name="TotalTimeTrails">Tempo Total a Realizar Trilhos:</string>

</resources>