<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/barraPerfil"
        android:layout_width="409dp"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:paddingLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints">


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imageViewUserPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_marginRight="30dp"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/viewProfileText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editar_perfil" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"/>


    </LinearLayout>

    <View
        app:layout_constraintTop_toBottomOf="@id/barraPerfil"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraPerfil"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/statsTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingLeft="30dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="Estatísticas"
            android:textColor="@color/colorMenuSelected"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="216dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:text="@string/KMTotal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/kmTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:textStyle="bold"
                android:text="@string/TotalTrailsDone"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/totalTrails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:text="@string/TotalTimeTrails"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeTrailsTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/statsView"
        app:layout_constraintTop_toBottomOf="@id/stats"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:text="Sign out"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/sign_out_menu"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_login_24"
                android:title="@string/sign_out" />
        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>